# kurzpy

./: README.md  main.py  pyproject.toml
app/core/: config.py  session.py  type_utils.py
app/decorators/: entity_service.py  kurzpy_decorator.py  rest_api.py  rest_api_decorator.py
app/decorators/tests/: conftest.py  rest_api_decorator_test.py
app/models/: user.py
lib/: __init__.py  decorator.py  entity_service.py  rest_api.py  setup.py
lib/errors/: db_errors.py
tests/: conftest.py  rest_api_decorator_test.py
