[project]
name = "kurzpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.137.2",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = "."
anyio_mode = "auto"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx2>=2.4.0",
    "pytest-asyncio>=1.4.0",
]
